// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Border - Divide Width space-x-0 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      Array [
        Object {
          "marginLeft": 0,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Border - Divide Width space-x-0.5 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      Array [
        Object {
          "marginLeft": 2,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Border - Divide Width space-x-1 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      Array [
        Object {
          "marginLeft": 4,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Border - Divide Width space-x-1.5 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      Array [
        Object {
          "marginLeft": 6,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Border - Divide Width space-x-96 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      Array [
        Object {
          "marginLeft": 384,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Border - Divide Width space-x-px 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      Array [
        Object {
          "marginLeft": 1,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Border - Divide Width space-y-0 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      Array [
        Object {
          "marginTop": 0,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Border - Divide Width space-y-0.5 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      Array [
        Object {
          "marginTop": 2,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Border - Divide Width space-y-1 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      Array [
        Object {
          "marginTop": 4,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Border - Divide Width space-y-1.5 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      Array [
        Object {
          "marginTop": 6,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Border - Divide Width space-y-96 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      Array [
        Object {
          "marginTop": 384,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Border - Divide Width space-y-px 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      Array [
        Object {
          "marginTop": 1,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;
